--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exp-tracker-be",
+  "name": "bizpark-be",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -15,9 +15,11 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4"
   },
   "devDependencies": {
